# SearchEngine

./: CMakeLists.txt  LICENSE.txt  README.md  config.json
include/: converterjson.h  invertedindex.h  searchserver.h
resources/: file001.txt  file002.txt  file003.txt  file004.txt  file005.txt  file006.txt
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
tests/: CMakeLists.txt  sample_tests.cpp
